# TonexOneController

./: .gitignore  DeepFrees.psd  FirmwareDevelopment.md  FirmwareUploading.md  HardwarePlatform_Atom_S3R.md  HardwarePlatform_DevKit-C.md  HardwarePlatform_JC3248W535.md  HardwarePlatform_Lilygo_TDisplay_S3.md  HardwarePlatform_Waveshare1.9.md  HardwarePlatform_Waveshare3.5B.md  HardwarePlatform_Waveshare4.3B.md  HardwarePlatform_WaveshareZero.md  HardwarePlatform_Waveshare_1.69.md  HardwarePlatforms.md  MidiCommands.md  README.md  TaskList.md  Tonex.psd  WebConfiguration.md  index.html
source/components/usb_host_midi/: CMakeLists.txt  midi_host.c  midi_host_descriptor_parsing.c
source/components/usb_host_midi/private_include/: midi_host_descriptor_parsing.h
source/main/: CH422G.c  CH422G.h  CMakeLists.txt  Kconfig.projbuild  LP5562.c  LP5562.h  SX1509.c  SX1509.h  control.c  control.h  display.c  display.h  display_tonex.c  display_tonex.h  display_valeton.c  display_valeton.h  footswitches.c  footswitches.h  idf_component.yml  index.html  leds.c  main.c  main.h  midi_control.c  midi_helper.c  midi_helper.h  midi_helper_tonex.c  midi_helper_tonex.h  midi_helper_valeton.c  midi_helper_valeton.h  midi_serial.c  platform_common.h  platform_devkitc.c  platform_jc3248w.c  platform_lgtdisps3.c  platform_m5atoms3r.c  platform_pirate_max35.c  platform_pirate_pro_169.c  platform_ws169.c  platform_ws19t.c  (+20 more)
source/main/ui_generated/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
source/main/ui_generated/images/: ui_img_arrow_left_png.c  ui_img_arrow_right_png.c  ui_img_bt_conn_png.c  ui_img_bt_disconn_png.c  ui_img_effect_icon_amp_off_png.c  ui_img_effect_icon_amp_on_png.c  ui_img_effect_icon_cab_off_png.c  ui_img_effect_icon_cab_on_png.c  ui_img_effect_icon_comp_off_png.c  ui_img_effect_icon_comp_on_png.c  ui_img_effect_icon_delay_off_png.c  ui_img_effect_icon_delay_on_d_png.c  ui_img_effect_icon_delay_on_png.c  ui_img_effect_icon_delay_on_t_png.c  ui_img_effect_icon_eq_png.c  ui_img_effect_icon_gate_off_png.c  ui_img_effect_icon_gate_on_png.c  ui_img_effect_icon_mod_off_png.c  ui_img_effect_icon_mod_on_chorus_png.c  ui_img_effect_icon_mod_on_flanger_png.c  ui_img_effect_icon_mod_on_phaser_png.c  ui_img_effect_icon_mod_on_png.c  ui_img_effect_icon_mod_on_rotary_png.c  ui_img_effect_icon_mod_on_tremolo_png.c  ui_img_effect_icon_reverb_off_png.c  ui_img_effect_icon_reverb_on_p_png.c  ui_img_effect_icon_reverb_on_png.c  ui_img_effect_icon_reverb_on_r_png.c  ui_img_effect_icon_reverb_on_s1_png.c  ui_img_effect_icon_reverb_on_s2_png.c  ui_img_effect_icon_reverb_on_s3_png.c  ui_img_effect_icon_reverb_on_s4_png.c  ui_img_next_down_png.c  ui_img_next_png.c  ui_img_previous_down_png.c  ui_img_previous_png.c  ui_img_pskin_arion_png.c  ui_img_pskin_bigmuff_png.c  ui_img_pskin_bossblack_png.c  ui_img_pskin_bosssilver_png.c  (+99 more)
source/main/ui_generated/screens/: ui_Screen1.c  ui_Settings.c
source/main/ui_generated_085/: ui.c  ui.h
source/main/ui_generated_085/screens/: ui_Screen1.c
source/main/ui_generated_128x128/: images.c  screens.c  screens.h
source/main/ui_generated_169/: ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
source/main/ui_generated_169/images/: ui_img_bt_conn_png.c  ui_img_bt_disconn_png.c  ui_img_smythbuilt_png.c  ui_img_usb_fail_png.c  ui_img_usb_ok_png.c  ui_img_wifi_conn_png.c  ui_img_wifi_disconn_png.c
source/main/ui_generated_169/screens/: ui_Screen1.c
source/main/ui_generated_169_land/: filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
source/main/ui_generated_169_land/components/: ui_comp_hook.c
source/main/ui_generated_19/: CMakeLists.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
source/main/ui_generated_240x280port/: images.c  images.h  screens.c  screens.h  ui_image_DeepFrees.c  ui_image_DeepFrees2.c  ui_image_DeepFrees3.c  ui_image_Tonex.c
source/main/ui_generated_280x240land/: actions.h  screens.c
source/main/ui_generated_320x170land/: actions.h  screens.c  screens.h  ui_image_bt_disconn.c
source/main/ui_generated_480x320land/: CMakeLists.txt  actions.h  images.c  images.h  screens.c  screens.h  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_image_amp_disabled.c  ui_image_amp_off.c  ui_image_amp_on.c  ui_image_cab_disabled.c  ui_image_cab_off.c  ui_image_cab_on.c  ui_image_dly_off.c  ui_image_dly_on.c  ui_image_dst_off.c  ui_image_dst_on.c  ui_image_effect_icon_eq.c  ui_image_effect_icon_gate_off.c  ui_image_effect_icon_mod_on_chorus.c  ui_image_eq_off.c  ui_image_eq_on.c  ui_image_mod_off.c  ui_image_mod_on.c  ui_image_next.c  ui_image_nr_off.c  ui_image_nr_on.c  ui_image_pre_off.c  ui_image_pre_on.c  ui_image_previous_down.c  ui_image_pskin_bossblack.c  ui_image_rvb_off.c  ui_image_rvb_on.c  ui_image_skin_ba500.c  ui_image_skin_fendertwin.c  (+3 more)
source/main/ui_generated_800x480land/: actions.h  images.c  images.h  screens.c  screens.h  ui.c  ui.h  ui_image_amp_disabled.c  ui_image_amp_off.c  ui_image_amp_on.c  ui_image_cab_disabled.c  ui_image_cab_off.c  ui_image_cab_on.c  ui_image_dly_off.c  ui_image_dly_on.c  ui_image_dst_off.c  ui_image_dst_on.c  ui_image_effect_icon_amp_off.c  ui_image_effect_icon_amp_on.c  ui_image_effect_icon_cab_off.c  ui_image_effect_icon_cab_on.c  ui_image_effect_icon_comp_off.c  ui_image_effect_icon_comp_on.c  ui_image_effect_icon_delay_off.c  ui_image_effect_icon_delay_on.c  ui_image_effect_icon_delay_on_d.c  ui_image_effect_icon_delay_on_t.c  ui_image_effect_icon_eq.c  ui_image_effect_icon_gate_off.c  ui_image_effect_icon_gate_on.c  ui_image_effect_icon_mod_off.c  ui_image_effect_icon_mod_on.c  ui_image_effect_icon_mod_on_chorus.c  ui_image_effect_icon_mod_on_flanger.c  ui_image_effect_icon_mod_on_phaser.c  ui_image_effect_icon_mod_on_rotary.c  ui_image_effect_icon_mod_on_tremolo.c  ui_image_effect_icon_reverb_off.c  ui_image_effect_icon_reverb_on.c  ui_image_effect_icon_reverb_on_p.c  (+26 more)
source/main/web/: bootstrap.css  bootstrap.js  index.css  index.html  script.js
(+310 files in other folders)
